[gd_scene load_steps=8 format=2]

[ext_resource path="res://MusicManager/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Music/NDKG.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Music/MysteriousFog.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Music/ambiance.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sfx/Correct.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sfx/Wrong.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sfx/kid_laughing.ogg" type="AudioStream" id=7]

[node name="MusicManager" type="Spatial"]
script = ExtResource( 1 )

[node name="DefaultMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0
autoplay = true
bus = "Music"

[node name="FinishMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="SfxCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "Sfx"

[node name="SfxWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 8.0
bus = "Sfx"

[node name="SfxKids" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Sfx"

[node name="TweenIn" type="Tween" parent="."]

[node name="TweenOut" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenIn" to="." method="_on_TweenIn_tween_completed"]
[connection signal="tween_completed" from="TweenOut" to="." method="_on_TweenOut_tween_completed"]
